tests/fail/not_openapitype.stderr
error[E0277]: the trait bound `Bar: OpenapiType` is not satisfied
 --> tests/fail/not_openapitype.rs:5:7
  |
5 |     bar: Bar
  |          ^^^ the trait `OpenapiType` is not implemented for `Bar`
  |
  = help: the following other types implement trait `OpenapiType`:
            &'a T
            ()
            BTreeMap<K, V>
            BTreeSet<T>
            CStr
            CString
            Foo
            HashMap<K, V, S>
          and $N others
